getting youtube data back sucessfully and diplkaying in our webapp

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@model Youtube_API.Models.YoutubeSearch
+@{
     ViewBag.Title = "Home Page";
 }
+@foreach (var item in Model.items)
+            {
+                <img src=" @item.snippet.thumbnails.high.url"/>
+                <p>@item.snippet.title</p>
+            }
 
